# Libigl_Proj

./: .gitignore
101_FileIO/: CMakeLists.txt
610_CSGTree/: CMakeLists.txt  get_mesh.cpp  get_mesh.h  main.cpp
610_CSGTree_original/: CMakeLists.txt  CMakeLists_test2.txt
610_CSGTree_original/cmake/: libigl.cmake
610_CSGTree_original/cmake/igl/: igl_add_executable.cmake
610_CSGTree_original/cmake/igl/modules/: core.cmake
610_CSGTree_original/src/: CMakeLists.txt
610_CSGTree_original/tutorial/: CMakeLists.txt
T001_geo/: CMakeLists.txt  main.cpp
T001_geo/gmsh/: CMakeLists.txt  geo.cpp  gmsh.h  surface.cpp
T001_geo/lib/: CMakeLists.txt  gmsh.cpp  gmsh.h
T002_geo/: CMakeLists.txt  main.cpp
T002_geo/cmake/igl/modules/copyleft/: cgal.cmake
T002_geo/data/: box.geo  box2.geo
T002_geo/libs/gmsh/: CMakeLists.txt  geo.cpp  gmsh.h
T002_geo/libs/migl/: mesh.cpp  mesh.h
T003_geo/: CMakeLists.txt  main.cpp
T003_geo/data/: box.geo
T003_geo/libs/gmsh/: geo.cpp  gmsh.h  line.cpp
T003_geo/libs/migl/: CMakeLists.txt  mesh.cpp  mesh.h
T004_geo/: CMakeLists.txt  main.cpp
T004_geo/data/: box_shift_x6m.geo  ground_model.geo
T004_geo/libs/gmsh/: geo.cpp  gmsh.h
T004_geo/libs/migl/: CMakeLists.txt  mesh.cpp  mesh.h
T005_geo/: CMakeLists.txt  main.cpp
T005_geo/data/: simple_box.geo
T005_geo/libs/cgal/: cgal.h
T005_geo/libs/gmsh/: geo.cpp  volume.cpp
T005_geo/libs/migl/: mesh.cpp  mesh.h
T006_geo/: CMakeLists.txt  main.cpp
T006_geo/cmake/igl/: igl_add_executable.cmake
T006_geo/data/: simple_ground_model.geo
T006_geo/libs/cgal/: CMakeLists.txt  cgal.cpp
T006_geo/libs/gmsh/: CMakeLists.txt  gmsh.h  point.cpp
T006_geo/libs/migl/: CMakeLists.txt
